2005-02-23  Christian Hergert <christian.hergert@gmail.com>

	* Gui/Dialogs/ReplaceDialog.cs: Check for null to prevent Exception.

2005-02-22  John Luke  <john.luke@gmail.com>

	* CodeCompletion/CodeCompletionDataProvider.cs:
	track the added Classes so we dont add them twice to the
	completion list, I think it should fix bug 72941

2005-02-22  John Luke  <john.luke@gmail.com>

	* Gui/SourceEditorView.cs (ScrollDown): don't change the
	value above maxvalue, fixes a little stutter I noticed

2005-02-12  Christian Hergert <christian.hergert@gmail.com>

	* Gui/SourceEditorBuffer.cs: Changed to DllImport the .dll rather
	than .so for glib.

2005-02-10  Ben Motmans  <ben.motmans@gmail.com>

	* Gui/SourceEditorView.cs: Added ScrollUp and ScrollDown methods
	for ctrl-up/down keybinds

2005-02-02  John Luke  <john.luke@gmail.com>

	* EditorBindings.glade:
	* Gui/OptionPanels/MarkersTextEditorPanel.cs:
	* Gui/OptionPanels/GeneralTextEditorPanel.cs:
	use Gnome.FileEntry where appropriate
	remove window-ish editor props (show line endings, etc)
	remove double buffering pref (we always are)

2005-02-01  John Luke  <john.luke@gmail.com>

	* Gui.SourceEditorBuffer.cs: use ErrorInfo
	and error underline improvements

2005-01-31  John Luke  <john.luke@gmail.com>

	* EditorBindings.glade:
	* Gui/SourceEditorBuffer.cs:
	* Gui/SourceEditorView.cs:
	* Gui/OptionPanels/MarkersTextEditorPanel.cs:
	* Gui/SourceEditorDisplayBinding.cs:
	* Properties/TextEditorProperties.cs:
	finish off underlining of errors, seems to
	work alright

2005-01-31  John Luke  <john.luke@gmail.com>

	* EditorBindings.glade:
	* Gui/SourceEditorView.cs:
	* Gui/OptionPanels/BehaviorTextEditorPanel.cs:
	* Gui/SourceEditorDisplayBinding.cs:
	* Properties/TextEditorProperties.cs:
	remove a couple useless texteditor props, enable
	the AutoInsertTemplates property

2005-01-31  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/SourceEditorDisplayBinding.cs: